--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -1,10 +1,3 @@
-@inproceedings{Albrecht98bayesianmodels,
-	author = {David W. Albrecht and Ingrid Zukerman and Ann E. Nicholson},
-	title = {{Bayesian Models for Keyhole Plan Recognition in an Adventure Game}},
-	year = {1998},
-	pages = {5--47},
-}
-
 @ARTICLE{Goldman99anew,
     author = {Robert P. Goldman and Christopher W. Geib and Christopher A. Miller},
     title = {{A New Model of Plan Recognition}},
@@ -142,4 +135,41 @@
  title = {{A Risky Proposal: Designing a Risk Game Playing Agent}},
  year = "2012",
 }
+
+@inproceedings{citeulike:5386647,
+    abstract = {{As the game development effort scales, AI developers are facing new challenges in terms of implementation, workflow, and game design.  The needs of today's games are outgrowing the typical techniques of modeling behavior with Finite State Machines and Rule Based Systems.  This paper argues that a regressive real-time planning system is better suited to address the challenges game developers are facing, and presents symbolic representation strategies that we have employed to allow planning in practice 
+in today's games.}},
+    address = {Menlo Park, CA},
+    author = {Orkin, Jeff},
+    booktitle = {Proc. of the 2004 AAAI Workshop},
+    citeulike-article-id = {5386647},
+    editor = {Fu, Dan and Orkin, Jeff},
+    keywords = {ai, delta3d, gaming, goap},
+    organization = {AAAI},
+    posted-at = {2009-08-06 22:52:08},
+    priority = {0},
+    publisher = {AAAI Press},
+    title = {{Symbolic Representation of Game World State: Toward Real-Time Planning in Games}},
+    year = {2004}
+}
+
+@article{Albrecht:1998:BMK:598277.598308,
+ author = {{David W. Albrecht, Ingrid Zukerman and Ann E. Nicholson}},
+ title = {{Bayesian Models for Keyhole Plan Recognition in an Adventure Game}},
+ journal = {{User Modeling and User-Adapted Interaction}},
+ issue_date = {1998},
+ volume = {8},
+ number = {1-2},
+ month = jan,
+ year = {1998},
+ issn = {0924-1868},
+ pages = {5--47},
+ numpages = {43},
+ url = {http://dx.doi.org/10.1023/A:1008238218679},
+ doi = {10.1023/A:1008238218679},
+ acmid = {598308},
+ publisher = {{Kluwer Academic Publishers}},
+ address = {{Hingham, MA, USA}},
+ keywords = {Bayesian Belief Networks, Plan recognition, abstraction, language learning, performance evaluation.},
+} 
  
